<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/terminal_agro"
        android:layout_marginTop="@dimen/margin_top" />

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_image"
        android:text="@string/masuk"
        android:textColor="@color/colorHitam"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/ukuran_judul"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="@dimen/ukuran_isi"
        android:textColor="@color/colorHitam"
        android:layout_below="@id/tv_masuk"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:fontFamily="@font/montserrat"
        />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nama"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/marginn_right"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nama"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textColor="@color/colorHitam"
        android:textSize="@dimen/ukuran_isi"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/marginn_right"/>

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_rectangle_hijau"
        android:text="@string/masuk"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorPutih"/>


    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_masuk"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_rectangle_putih"
        android:textColor="@color/colorBiru"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/daftar"/>

</RelativeLayout>