<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AlamatBaru"
        android:padding="@dimen/margin_bottom">

        <TextView
            android:id="@+id/tv_namaJalan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/nama_jalan"
            android:textColor="@color/colorHitam"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_namaJalan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaJalan"
            />

        <TextView
            android:id="@+id/tv_provinsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/provinsi"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintTop_toBottomOf="@id/et_namaJalan"/>

        <EditText
            android:id="@+id/et_provinsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_provinsi"
            />

        <TextView
            android:id="@+id/tv_kotaKabupaten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kota_kabupaten"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintTop_toBottomOf="@id/et_provinsi"/>

        <EditText
            android:id="@+id/et_kotaKabupaten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_kotaKabupaten"
            />

        <TextView
            android:id="@+id/tv_kecamatan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kecamtan"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintTop_toBottomOf="@id/et_kotaKabupaten"/>

        <EditText
            android:id="@+id/et_kecamtan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_kecamatan"
            />

        <TextView
            android:id="@+id/tv_namaPenerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nama_penerima"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintTop_toBottomOf="@id/et_kecamtan"/>

        <EditText
            android:id="@+id/et_namaPenerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaPenerima"
            />

        <TextView
            android:id="@+id/tv_nomorPenerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nomor_penerima"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/ukuran_isi"
            app:layout_constraintTop_toBottomOf="@id/et_namaPenerima"/>

        <EditText
            android:id="@+id/et_nomorPenerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/colorHitam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomorPenerima"
            />


        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kiri"
            android:layout_marginEnd="@dimen/kanan"
            android:background="@drawable/shape_rectangle_hijau"
            android:text="@string/simpan"
            android:textColor="@color/colorPutih"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nomorPenerima"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>